--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -240,7 +240,7 @@ body {
     justify-content: initial;
     flex-direction: column;
     padding: 0;
-    overflow: hidden;
+    overflow: auto;
     max-height: 358px;
     transition: max-height 0.3s ease-in-out;
   }
